--- a/Admin Pages/admin.css
+++ b/Admin Pages/admin.css
@@ -319,7 +319,7 @@ th, td {
 }
 
 /* Inline buttons */
-.edit-btn, .update-btn {
+.edit-btn {
     padding: 5px 10px;
     margin-top: 4px;
     font-size: 13px;
@@ -335,3 +335,5 @@ th, td {
 .update-btn:hover {
     background-color: #0056b3;
 }
+
+
